opendut-viper/viper-py/viper-pygen/tests/pygen/should_fail_on_enums.rs
use viper_pygen::pygen;

#[pygen]
enum Fubar {}

fn main() {}
